- Fixed the name, ammo capacity type, and built-in accessories of the Wuxing-Armtech PTL-02.
- Numinous Perception has been added as an example Perception specialization based on page 314 of the core rulebook.
- Flamethrower propely has the Elemental descriptor.

Changed/New Strings:
- Checkbox_Options_UncappedArmorAccessoryBonuses
- String_DamageTorpedo
- Message_CharacterOptions_DesyncFromHashCode
- MessageTitle_CharacterOptions_DesyncFromHashCode
- DialogFilter_Chummer
- DialogFilter_Chum5
- DialogFilter_Chum5lz
- Label_Options_Chum5lzCompressionLevel
- String_Fast_Option
- String_Balanced_Option
- String_Thorough_Option
- Message_Export_Error_Warning

Build 223
Application Changes:
- Characters can now be opened up directly for printing (including exporting to PDF) or for exporting without needing to fully open a character for editing.
- Character sheet viewers and character export windows are now treated the same way as "normal" character windows, meaning they open in tabs now instead of a dialog and can be kept open in the background while editing characters.
- Changing the rating of a knowsoft or linguasoft after it has been bought no longer causes Chummer to crash. Fixes #4708.
- Skill group rating maxima now also follow values set in character settings for maximum skill ratings.
- Disabling the setting that allows skills to be regrouped now properly makes skill groups remain broken after character creation if they are broken at least once.
- Fixed issues where setting a character to ignore character creation rules still did not allow them to spend skill points and karma as freely as they should have.
- The house rule to compensate the karma cost for raising the last skill in a broken skill group is no longer overwritten by bonuses that set a minimum karma cost for learning skills.
- Added a house rule that allows specializations to no longer break skill groups.